add Chinese lang support

--- a/romfs/guide/1/1/config.json
+++ b/romfs/guide/1/1/config.json
@@ -4,7 +4,7 @@
 	],
 	"text" : [
 		{
-			"title" : "Introduction to EdiZon SE",
+			"title" : "EdiZon SE简介",
 			"path" : "text.txt",
 			"x" : 50,
 			"y" : 100
