--- a/romfs/guide/1/5/config.json
+++ b/romfs/guide/1/5/config.json
@@ -3,7 +3,7 @@
 	],
 	"text" : [
 		{
-			"title" : "How to create a multi-save backup?",
+			"title" : "如何创建多存档备份？",
 			"path" : "text.txt",
 			"x" : 50,
 			"y" : 100
