--- a/romfs/guide/2/7/config.json
+++ b/romfs/guide/2/7/config.json
@@ -3,7 +3,7 @@
 	],
 	"text" : [
 		{
-			"title" : "How do I edit my save files?",
+			"title" : "如何编辑存档文件？",
 			"path" : "text.txt",
 			"x" : 50,
 			"y" : 100
